# glucoplate-ai

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PROJECT_STATUS.md  README.md  ROADMAP.md  package.json  playwright.config.js  pyproject.toml  render.yaml  temp_inspect_router.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
Docs/: live-cooking-shopping-plan.md
app/: logging_config.py  main.py
data/: recipes.json
docs/: .live-cooking-flow-pr-marker  01-product-requirements.md  02-system-architecture.md  03-ai-agent-architecture.md  04-store-product-availability.md  05-basic-init-lessons.md  06-recipe-image-gallery.md  07-deployment-render.md  AI_DEVELOPMENT_GUIDE.md  COMMUNITY_AI_RECIPE_BLOG_DETAIL.md  DEPLOYMENT_SECRETS.md  DESIGN_AND_ENGINEERING_BOOKLET.md  FIREBASE_AUTHENTICATION.md  IOS_PWA_NATIVE_CAPABILITIES.md  LIVE_COOKING_DESIGN_TARGET.md  LIVE_COOKING_FLOW.md  LIVE_KITCHEN_WORKSPACE.md  POST_COOK_HISTORY.md  PREMIUM_LAUNCH_READINESS.md  PRODUCT_ROADMAP_ALIGNMENT.md  PROJECT_DOCUMENTATION.md  README.md  RENDER_POST_DEPLOY_TESTING.md  SYSTEM_ARCHITECTURE.md  livekit-video-calls.md  receipt-rebrand-roadmap.md
milestones/: BACKLOG.md  README.md  v0.4-native-pwa.md  v0.5-authentication.md  v0.6-ai-personalization.md  v0.7-meal-planning.md  v0.8-social-and-sharing.md  v0.9-ai-cooking-assistant.md  v1.0-production-readiness.md
prompts/: nutrition.md  planner.md  recipe.md  reviewer.md  safety.md
scripts/: agent_sync.py  check_copilot.py  copilot_session_example.py
tests/: test_admin_dashboard_smoke.py  test_admin_role_editor.py  test_agent_interface.py  test_auth_flow.py  test_cart_store.py  test_community_price_observations.py  test_dynamic_authorization.py  test_enterprise_auth.py  test_flavor_memory_ui.py  (+45 more)
(+160 files in other folders)
