[project]
name = "receipt-ai"
version = "0.2.0"
description = "Receipt capture, organization, search, and spending intelligence app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.0",
    "pywebpush>=2.0.3",
    "github-copilot-sdk>=1.0.5",
    "google-genai>=1.0.0",
    "groq>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E402",
    "F401",
    "F811",
    "F841",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
